Fixed the dropdown menus so it no longer overlaps.

--- a/PC2/wwwroot/css/site.css
+++ b/PC2/wwwroot/css/site.css
@@ -206,6 +206,11 @@ ul.navbar-nav, .dropdown-item {
     margin: 0 auto;
 }
 
+.navbar-nav .dropdown-menu {
+    position: absolute;
+    border: 2px solid black;
+}
+
 nav .container {
     padding: 0;
 }
